style(select-properties): fix the alignment label-asterisk

--- a/src/app/workspace/resource/resource-instance-form/select-properties/select-properties.component.scss
+++ b/src/app/workspace/resource/resource-instance-form/select-properties/select-properties.component.scss
@@ -40,6 +40,9 @@
 
                 .label {
                 text-align: right;
+                display: block;
+                float: left;
+                width: 95%;
                 }
 
                 .label-info {
@@ -48,6 +51,9 @@
 
                 .propIsRequired {
                   color: red;
+                  display: block;
+                  float: right;
+                  width: 5%;
                 }
             }
 
